# crewai-research

./: .gitignore  poetry_project.md  readme.md  using_colab.md  yaml_vs_direct_code.md
.devcontainer/: devcontainer.json
latest_ai_development/: .env.template  report.md
speech_content/: README.md  pyproject.toml
speech_content/src/speech_content/: crew.py  main.py
